# ExternalKeyboardKO

./: .gitignore  .gitmodules  README.md  README_en.md  settings.gradle.kts
.github/workflows/: build.yml  release.yml
app/: build.gradle.kts
app/src/androidTest/java/kr/stonecold/exkeyko/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: dictionary.txt
app/src/main/cpp/: CMakeLists.txt  hangul_input_processor.cpp
app/src/main/java/kr/stonecold/exkeyko/: CandidateScrollView.kt  EnglishConverter.kt  HangulInputMethodService.kt  HangulInputProcessor.kt  HanjaOverlay.kt  KoreanChecker.kt  PreferenceDefaults.kt  SettingsActivity.kt  Util.kt
app/src/main/java/kr/stonecold/exkeyko/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/xml/: method.xml
app/src/test/java/kr/stonecold/exkeyko/: ExampleUnitTest.kt
dictionary/: dictionary_min.txt  hanja.txt  merge.py  mssymbol.txt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
